# task-tracker

./: .env  Containerfile  README.md  cleanup_task_tracker_env.sh  pyproject.toml  run_db_container.sh  run_task_tracker_app_container.sh  run_uvicorn.sh
doc/: FastAPIandUvicorn.odp
src/: benchmark.py  bulk_insert.py  database.py  main.py  pydantic_models.py  tasks_router.py
