[project]
name = "task-tracker"
version = "0.1.0"
description = "FastAPI Task Tracker API with SQLAlchemy Core and PostgreSQL"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.9"

dependencies = [
    "fastapi",
    "uvicorn[standard]",          # ASGI server
    "sqlalchemy[asyncio]>=2.0",   # SQLAlchemy 2.x with asyncio
    "asyncpg",                    # PostgreSQL async driver
    "pydantic>=2",                # Pydantic v2
    "pydantic-settings",          # Env config (optional, used below)
]

[tool.pdm]

[tool.pdm.scripts]
dev = "uvicorn main:app --host 0.0.0.0 --port 8000 --reload"

[tool.pdm.dev-dependencies]
dev = [
    "pytest",
    "httpx>=0.27",
    "ruff",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
